--- a/project_smartStore/src/components/Header.css
+++ b/project_smartStore/src/components/Header.css
@@ -23,6 +23,9 @@ body{
  font-size: 35px ;
  color: white;
 }
+.logo:hover {
+      color: rgb(185, 185, 185); /* Change to any color you want */
+    }
 .List{
    margin-right: 3%;
     display: flex;
@@ -33,10 +36,17 @@ body{
 .size{
     margin-top: 0px;
     color: rgb(255, 255, 255);
+    background-color: black;
+    border: none;
+
     font-weight: 100px;
 font-size: 22px;
 list-style: none;
 }
+
+.size:hover {
+      color: rgb(185, 185, 185); /* Change to any color you want */
+    }
 .List2{
     height: 100px;
     display: flex;
