--- a/project_smartStore/src/components/Advertisement/Advertisement.css
+++ b/project_smartStore/src/components/Advertisement/Advertisement.css
@@ -1,13 +1,24 @@
 .theDiv{
-    margin-right: 12%;
-    margin-left: 10%;
+
+    /* margin-right: 12%;
+    margin-left: 10%; */
+    /* width: 80%; */
+    margin-top: 3.5%;
     display: flex;
     align-items: center;
     justify-content: center;
    
+   
+}
+.theImg{
+     width: 80%;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-direction: column;
 }
 .theImg:hover{
-width: 105%;
+width: 90%;
 
 }
 /* .background{
