--- a/project_smartStore/src/page/Prodect.css
+++ b/project_smartStore/src/page/Prodect.css
@@ -17,14 +17,17 @@ body{
   width: 250px;
    display: grid ;
    grid-template: 150px 100px 25px 75px;
-   background-color: rgb(247, 247, 247);
+   /* background-color: rgb(247, 247, 247); */
    border-radius: 10px;
+   border: 1px black solid;
  
 }
 .cover-of-text{
     display: flex;
   justify-content: center;
   align-items: center;
+     background-color: rgb(247, 247, 247);
+
 }
 .text_algin{
 word-wrap: normal;
@@ -54,10 +57,15 @@ margin-left: 8%;
       display: flex;
       align-items: center;
       justify-content: center;
+         background-color: rgb(247, 247, 247);
+         border-radius: 10px;
+
     }
     .price{
       text-align: center;
       color: red;
+         background-color: rgb(247, 247, 247);
+         margin: 0px;
     }
 
     .link-of-item{
