--- a/project_smartStore/src/components/ThePageOfItem/thePageOfItem.css
+++ b/project_smartStore/src/components/ThePageOfItem/thePageOfItem.css
@@ -114,6 +114,10 @@
         height: 30px;
     
     }
+     .the-part-of-specification h3{
+        color: #313131;
+     }
+
 @media screen and (max-width:600px) {
 
     .thepage33{
