--- a/project_smartStore/src/page/Css/Shopcategory.css
+++ b/project_smartStore/src/page/Css/Shopcategory.css
@@ -7,12 +7,12 @@
 .sort{
   display: flex;
 justify-self: end;
-  border-radius: 75px;
-  background-color: #f1efef;
-  width: 100px;
+gap: 10px;
+
+
  justify-content: center;
- padding: 8px;
-border: 1px black solid;
+
+margin-bottom: 5%;
 }
 .sort img
 {
@@ -34,4 +34,13 @@ border: 1px black solid;
 margin-left: 10%;
 margin-right: 10%;
 
+}
+.the_board{
+  /* border: none; */
+  border-radius: 50px;
+  padding: 5px;
+}
+.the_board:hover{
+  background-color: black;
+  color: white;
 }
