--- a/project_smartStore/src/page/Prodect.css
+++ b/project_smartStore/src/page/Prodect.css
@@ -16,9 +16,9 @@ body{
   height: 350px;
   width: 250px;
    display: grid ;
-   grid-template: 150px 100px 25px 75px;
+   grid-template: 20px 130px 100px 25px 75px;
    /* background-color: rgb(247, 247, 247); */
-   border-radius: 10px;
+   /* border-radius: 10px; */
    border: 1px black solid;
  
 }
@@ -71,4 +71,23 @@ margin-left: 8%;
     .link-of-item{
       text-decoration: none;
       color: black;
+    }
+    .the_offer{
+      display: flex;
+    /* width: 20%; */
+    /* border-radius: 10px; */
+    justify-content: space-between;
+    }
+    .the_offer h3{
+      /* margin-bottom:4px ; */
+      margin-top: 0px;
+      font-weight: 3px;
+          background-color: rgb(242, 255, 0);
+padding: 10px;
+    }
+    .the_offer h2{
+     
+      margin-top: 0px;
+      padding: 10px;
+      background-color: rgb(249, 28, 28);
     }
