--- a/my-react-app/src/componant/AddProduct/AddProduct.css
+++ b/my-react-app/src/componant/AddProduct/AddProduct.css
@@ -5,11 +5,20 @@
 }
 .theaddproduct{
     margin-left: 30%;
+    border: 3px black solid;
+    padding: 20px;
+    margin-right: 30%;
+    background-color: rgb(246, 246, 246);
+    border: none;
+    border-radius: 15px;
 }
 .theaddproduct button{
-    padding: 5px;
-    background-color: white;
-    border-radius: 4px;
+    padding: 10px;
+    background-color: rgb(90, 154, 69);
+    border-radius: 20px;
+    color: white;
+    border: none;
+
 }
 .theaddproduct button:hover{
       background-color: black;
@@ -17,7 +26,7 @@
 }
 input{
     padding: 8px;
-    width: 50%;
+    width: 95%;
 }
 label{
     width: 30%;
@@ -28,14 +37,19 @@ label{
     gap: 20px;
     margin-top: 5%;
     margin-bottom: 5%;
+    flex-wrap: wrap;
 }
 .button_of_add button{
-    padding: 5px;
+    padding: 14px;
     background-color: white;
-    border-radius: 4px;
-
+    border-radius: 20px;
+    font-weight: 700;
+   color: rgb(58, 0, 159);
+   background-color: rgb(141, 191, 235);
+   border: none;
+   font-size: 15px;
 }
 .button_of_add button:hover{
-    background-color: black;
+    background-color: rgb(141, 191, 235);
     color: white;
 }
