--- a/my-react-app/src/componant/AllCart/AllCart.css
+++ b/my-react-app/src/componant/AllCart/AllCart.css
@@ -1,6 +1,20 @@
 .thepacageofcart{
     border: 2px black solid;
+    width: 690px;
+    padding: 5px;
 }
 .thepageofcart{
-    margin: 50px;
+    /* margin: 50px;
+ display: flex;
+    flex-wrap: wrap;
+    gap: 10px; */
+    border: none;
+    /* background-color: rgb(236, 236, 236); */
+    border-radius: 20px;
+}
+.thehover{
+     background-color: rgb(255, 255, 255);
+}
+.thehover:hover{
+    background-color: rgb(239, 239, 239);
 }
