--- a/my-react-app/src/componant/Home/Home.css
+++ b/my-react-app/src/componant/Home/Home.css
@@ -3,8 +3,53 @@
     justify-content: center;
     align-items: center;
     height: 80vh;
-    width: 90%;
+    /* width: 90%; */
 }
 h1{
-    font-size: 100px;
+    font-size: 70px;
+}
+.thelogin-admin {
+    width: 650px; 
+    /* margin-left: 10%; */
+    background-color: rgb(171, 216, 255);
+    padding: 35px;
+    border-radius: 15px;
+    
+}
+.thelogin-admin h2{
+    margin-top: 0px;
+}
+.thelogin-admin input{
+    width: 95%;
+    border-radius: 5px;
+    border: none;
+}
+.thelogin-admin button{
+    padding: 10px;
+       background-color: rgb(171, 216, 255);
+ width: 80px;
+ border-radius: 20px;
+}
+.thelogin-admin button:hover{
+    padding: 10px;
+       background-color: rgb(0, 0, 0);
+ width: 80px;
+ border-radius: 20px;
+ color: rgb(171, 216, 255) ;
+}
+.logout-admin{
+    padding: 15px;
+    font-size: 25px;
+    border-radius: 35px;
+    background-color: red;
+    font-weight: 700;
+    width: 50%;
+}
+.thepage-afetr-login{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+
 }
