--- a/my-react-app/src/componant/Navbar/Navbar.css
+++ b/my-react-app/src/componant/Navbar/Navbar.css
@@ -1,24 +1,24 @@
 .backGroundOfEleament{
     background-color: black;
-    width: 100%;
-    padding: 2%;
+  
+    padding-top: 2%;
+    padding-bottom: 2%;
+
 }
 
 
 .theelement  {
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 5%;
 }
 li{
     list-style: none;
     font-size: 170%;
     color: white;
-  /* margin-top: 2%; */
-  /* margin-bottom: 2%; */
 }
 a{
     text-decoration: none;
-   /* display: flex; */
-   /* width: 70%; */
+
 }
