--- a/my-react-app/src/componant/AddProduct/AddProduct.css
+++ b/my-react-app/src/componant/AddProduct/AddProduct.css
@@ -53,3 +53,7 @@ label{
     background-color: rgb(141, 191, 235);
     color: white;
 }
+.the-Add-A-New-Product{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight:bold;
+}
