--- a/my-react-app/src/componant/AllProduct/AllProduct.css
+++ b/my-react-app/src/componant/AllProduct/AllProduct.css
@@ -2,26 +2,31 @@
     display: flex;
     /* width: 100%; */
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 25px;
     justify-content: center;
+    padding: 5px;
 }
 .theElement{
-    padding: 0.5%;
-    border: 2px black solid;
-    width: 250px;
-
+ height: 450px;
+  width: 250px;
+   display: grid ;
+   grid-template: 200px 50px 50px 50px 100px;
+   /* background-color: rgb(247, 247, 247); */
+   /* border-radius: 10px; */
+   border: 2px black solid;
+   padding: 5px;
 }
 .deleteitem{
-    padding: 7px;
-border-radius: 25px;
+    padding: 2px;
+/* border-radius: 25px; */
 /* background-color: white; */
 background-color: red;
 color: black;
 /* width: 750px; */
-margin-top: 10px;
-margin-bottom: 1px;
+/* margin-top: 10px;
+margin-bottom: 1px; */
 border: none;
-width: 100%;
+/* width: 100%; */
 font-weight: 1000;
 }
 .deleteitem:hover{
@@ -38,13 +43,14 @@ font-weight: 1000;
     border-radius: 20px;
 }
 .thebuttonOfUpdateProduct{
-       padding: 8px;
+       padding: 10px;
     background-color: rgb(255, 222, 38);
     border-radius: 4px;
     font-weight: 700;
     border-radius: 10px;
     color: rgb(0, 0, 0);
     border: none;
+    font-size: 16px;
 }
 .thebuttonOfUpdateProduct:hover{
     background-color: black;
