--- a/project_smartStore/src/components/Footer/Footer.css
+++ b/project_smartStore/src/components/Footer/Footer.css
@@ -118,3 +118,31 @@ font-weight: 700;
   -webkit-text-fill-color: transparent;
   font-weight: bold; /* optional for better visual effect */
 }
+@media (max-width: 768px) {
+    .img-and-text-socialmedia h3{
+    color: white;
+    font-size: 15px;
+    margin: 0px;
+}
+.img-and-text-socialmedia h3{
+    color: white;
+    font-size: 15px;
+    margin: 0px;
+}
+.footer-logo h1{
+    font-size: 30px;
+    margin: 0px;
+    color: rgb(255, 0, 0);
+    margin: 0px;
+}
+.thetext-footer{
+font-size: 15px;
+font-weight: 700;
+
+}
+.theFooter-link li{
+   color: rgb(255, 255, 255);
+  font-size: 18px;
+  font-weight: 700;
+}
+}
